# knotty

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
.githooks/: pre-commit  pre-push
data/: style.css
data/ui/: window.cmb.ui
docs/: README.md
docs/audit/: gtk-automation-protocol-001.md
docs/notes/: README.md  automation.md  client.md  editor.md  explorer.md  graph.md  note-types.md  runtime.md  settings.md  shell.md
docs/plans/: 2026-03-14-git-gates-design.md  2026-03-14-git-gates-implementation-plan.md  2026-03-14-gtk-automation-plan.md  2026-03-14-gtk-editor-plan.md  2026-03-14-gtk-explorer-plan.md  2026-03-14-gtk-graph-plan.md  2026-03-14-gtk-note-types-plan.md  2026-03-14-gtk-parity-execution-playbook.md  2026-03-14-gtk-runtime-contract-plan.md  2026-03-14-gtk-settings-plan.md  2026-03-14-gtk-shell-plan.md  2026-03-15-gtk-automation-design.md  2026-03-15-gtk-deprecations-design.md  2026-03-15-gtk-deprecations-plan.md  2026-03-15-gtk-editor-design.md  2026-03-15-gtk-graph-design.md  2026-03-15-gtk-quality-design.md  2026-03-15-gtk-quality-plan.md  2026-03-15-gtk-settings-design.md  2026-03-16-project-rename-design.md  2026-03-16-project-rename-plan.md
docs/reference/: README.md  automation-behavior.md  editor-behavior.md  explorer-behavior.md  (+5 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: automation_protocol_jsonrpc.rs
scripts/: check-changelog-policy.sh  check-changelog-staged.sh  check-doc-work-evidence.sh  check-full-gate.sh  check-fuzz.sh  check-pre-commit-gate.sh  check-property-tests.sh  check-rust-clippy.sh  check-rust-format.sh  check-rust-tests.sh  gate-helpers.sh  install-hooks.sh
src/: cli.rs  lib.rs  main.rs  runtime_contract.rs
tests/: automation_protocol.rs  fuzz_gate_script.rs
(+38 files in other folders)
