[package]
name = "knotty-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.knotty]
path = ".."

[[bin]]
name = "automation_protocol_jsonrpc"
path = "fuzz_targets/automation_protocol_jsonrpc.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
